tests/NormalTests/paczka1/fuzzy1/47278074.err
Error in line 7: ATYmctPiEaX A323 63,5
Error in line 20: OI1abAnF A336 99,6
Error in line 21: OI1abAnF S577 23,8
Error in line 18: Sxe4ed0KEZG S577 39,0
Error in line 32: A323 S577 49,0
